# ucc_2023_lecture

./: .gitignore  .gitpod.yml  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cmake.yml  cmake_wokflow_dispatch.yml
cmake/: CMakeLists.txt
cookbook/: CMakeLists.txt
cookbook/01_swap/: main.cpp
cookbook/02_random/: main.cpp
cookbook/03_operators/: CMakeLists.txt  IntArray.cpp  IntArray.h  IntList.cpp  IntList.h  Integer.cpp  Integer.h  main.cpp
cookbook/04_rule_of_three/: CMakeLists.txt  DynamicIntArray.cpp  DynamicIntArray.h  DynamicIntList.cpp  DynamicIntList.h  main.cpp
cookbook/05_inheritance/: Base.cpp  Derived.cpp  main.cpp
cookbook/06_exceptions/: CMakeLists.txt  IntArray.cpp  IntArray.h  main.cpp
cookbook/07_templates/: Array.h  Array5.h  main.cpp
cookbook/08_file_io/: CMakeLists.txt  main.cpp
docs/: README.md
template/: CMakeLists.txt
template/00_single_file/: CMakeLists.txt
template/01_multiple_files/: CMakeLists.txt
template/04_multiple_executable_gtest/: CMakeLists.txt  main.cpp  main_test.cpp  mymath.cpp
u1/: CMakeLists.txt
u1/ej01/: CMakeLists.txt
u1/ej02/: CMakeLists.txt  main.cpp  utils.cpp  utils.h
u1/ej03/: CMakeLists.txt
u1/ej04/: CMakeLists.txt  main.cpp
u1/ej05/: CMakeLists.txt
u1/ej06/: CMakeLists.txt
u1/ej07/: CMakeLists.txt
u1/ej08/: CMakeLists.txt
u1/ej09/: CMakeLists.txt
u1/ej10/: CMakeLists.txt
u1/ej11/: CMakeLists.txt
u1/ej12/: CMakeLists.txt
u1/ej13/: CMakeLists.txt
u1/ej14/: CMakeLists.txt
u1/ej15/: CMakeLists.txt
(+62 files in other folders)
