add_subdirectory(ej01)
add_subdirectory(ej02)
add_subdirectory(ej03)
add_subdirectory(ej04)
add_subdirectory(ej05)
add_subdirectory(ej06)
add_subdirectory(ej07)
add_subdirectory(ej08)
add_subdirectory(ej09)
add_subdirectory(ej10)
add_subdirectory(ej11)
add_subdirectory(ej12)
add_subdirectory(ej13)
add_subdirectory(ej14)
add_subdirectory(ej15)